Erweiterung für Testdatenerzeugung