@@ -7,6 +7,14 @@ java {
     targetCompatibility = JavaVersion.VERSION_14
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
 repositories {
     jcenter()
 }
